@@ -1,3 +1,10 @@
+2008-12-03  Gordon Williams <gordon.williams@collabora.co.uk>
+
+	* src/launcher/hd-launcher-page.c
+	* src/launcher/hd-launcher-grid.c:
+	Added extra checks to make sure we don't get Clutter CRITICALs when an
+	Icon cannot be found
+
 2008-12-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Release 2.2.8
